# cardiotox-backend

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  FRONTEND_API_REFERENCE.md  README.md  backend.md  project.md
fe-guide/: frontend_auth_integration.md
migrations/: 0001_init.sql  0002_email_tokens.sql  0003_oauth_accounts.sql  0004_auth_events.sql  0005_prediction_logs.sql  0006_shap_logs.sql  0007_roles_and_soft_delete.sql  0008_action_codes.sql  0009_conformal_fields.sql
src/: api.rs  config.rs  db.rs  error.rs  main.rs  state.rs  telemetry.rs
src/admin/: mod.rs
src/auth/: action_codes.rs  admin.rs  backend.rs  email_auth.rs  google_oauth.rs  mod.rs  password.rs  tokens.rs
src/email/: mod.rs
src/logging/: audit.rs
src/models/: mod.rs  oauth_account.rs  shap_log.rs  user.rs
src/services/: prediction.rs
