[package]
name = "cardiotox-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "^1"
argon2 = "^0.5"
axum = "^0.8"
axum-login = "^0.18"
dotenvy = "^0.15"
futures-util = "0.3.32"
hex = "0.4.3"

oauth2 = { version = "^5", default-features = false, features = ["reqwest", "rustls-tls"] }
rand = "0.10.2"
reqwest = { version = "^0.12", default-features = false, features = ["json", "rustls-tls"] }
reqwest-eventsource = "0.6.0"
serde = { version = "^1", features = ["derive"] }
serde_json = "^1"
sha2 = "0.11.0"
sqlx = { version = "^0.8", default-features = false, features = ["runtime-tokio", "tls-rustls", "postgres", "uuid", "time", "migrate", "macros"] }
thiserror = "^2"
time = { version = "0.3.53", features = ["serde"] }
tokio = { version = "^1", features = ["full"] }
tower = "^0.5"
tower-http = { version = "^0.6", features = ["trace", "cors", "request-id", "util"] }
tower-sessions-sqlx-store = { version = "0.15.0", features = ["postgres"] }
tower_governor = "0.8.0"
tracing = "^0.1"
tracing-subscriber = { version = "^0.3", features = ["env-filter", "json"] }
uuid = { version = "1.23.4", features = ["v4", "serde"] }
validator = { version = "0.20.0", features = ["derive"] }
